apps/kite/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kite
  labels:
    cloudlab.kerbaras.com/gateway-access: "true" # UI behind the edge
